# LiDAR_IMU_Init

./: CMakeLists.txt  package.xml
config/: ouster.yaml  ouster32.yaml
include/: common_lib.h  time_utils.cpp
include/LI_init/: LI_init.cpp  LI_init.h
launch/: mapping.launch.py
msg/: States.msg
rviz/: li_init.rviz
src/: IMU_Processing.hpp  laserMapping.cpp  preprocess.cpp  preprocess.h
